Submit: 1Nonly Coffee Restro

--- a/Index.html
+++ b/Index.html
@@ -165,23 +165,23 @@
                 <ul class="contact-info-list">
                     <li class="contact-info">
                         <i class="fa-solid fa-location-crosshairs"></i>
-                        <p>123 Campsite Avenue, Wilderness, CA 98765</p>
+                        <p>Delhi, India</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-regular fa-envelope"></i>
-                        <p>info@coffeeshopwebsite.com</p>
+                        <p>info@1nonlycoffeerestro.com</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-solid fa-phone"></i>
-                        <p>(123) 456-78909</p>
+                        <p>(+91) 82874-93774</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-regular fa-clock"></i>
-                        <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
+                        <p>Monday - Friday: 9:00 AM - 11:00 PM</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-regular fa-clock"></i>
-                        <p>Saturday: 10:00 AM - 3:00 PM</p>
+                        <p>Saturday: 10:00 AM - 8:00 PM</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-regular fa-clock"></i>
@@ -189,7 +189,7 @@
                     </li>
                     <li class="contact-info">
                         <i class="fa-solid fa-globe"></i>
-                        <p>www.coffee.com</p>
+                        <p>rohanjaiswal.info</p>
                     </li>
                 </ul>
                 <form action="#" class="contact-form">
