Submit: 1Nonly Coffee Restro

--- a/Index.html
+++ b/Index.html
@@ -76,8 +76,10 @@
                         exceptional coffee experience in a cozy and inviting atmosphere, where guests can relax, unwind,
                         and enjoy their time in comfort.</p>
                     <div class="social-link-list">
-                        <a href="#" class="social-link"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/RohanJaiswalDev" target="_blank" class="social-link"><i
+                                class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/___.1nonly.___/" target="_blank" class="social-link"><i
+                                class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -205,8 +207,10 @@
             <div class="section-content">
                 <p class="copyright-text">© 2025 | Rohan Jaiswal</p>
                 <div class="social-link-list">
-                    <a href="https://github.com/RohanJaiswalDev" target="_blank" class="social-link"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.instagram.com/___.1nonly.___/" target="_blank" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/RohanJaiswalDev" target="_blank" class="social-link"><i
+                            class="fa-brands fa-github"></i></a>
+                    <a href="https://www.instagram.com/___.1nonly.___/" target="_blank" class="social-link"><i
+                            class="fa-brands fa-instagram"></i></a>
                 </div>
                 <p class="policy-text">
                     <a href="#" class="policy-link">Privacy policy</a>
