Submit: 1Nonly Coffee Restro

--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,6 @@
     <title>1Nonly Coffee Restro | Rohan Jaiswal</title>
     <!-- Linking Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-    <!-- Linking Swiper CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Favicon icon -->
     <link rel="shortcut icon" href="Img/Coffee-Favicon.png" type="image/x-icon">
     <!-- Css link -->
@@ -219,9 +217,13 @@
                 </p>
             </div>
         </footer>
+
+        <!-- Bottom to top -->
+        <div id="back-to-top" style="display: block;">
+            <i class="fa-solid fa-arrow-up"></i>
+        </div>
+
     </main>
-    <!-- Linking Swiper script -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- Linking custom script -->
     <script src="JS/Script.js"></script>
 </body>
